# python-som

./: README.md  pyproject.toml  setup.py  test.py  test_iris.ipynb
python-som/: __init__.py
python_som/: __init__.py
