[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "python-som"
version = "0.1.2"
authors = [
  { name="André Moreira Souza", email="msouza.andre@hotmail.com" },
]
description = "Python implementation of the Self-Organizing Map"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/andremsouza/python-som"
Issues = "https://github.com/andremsouza/python-som/issues"